--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "validator": "^10.8.0"
   },
   "scripts": {
