--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "react-modal": "2.2.2",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "uuid": "3.1.0",
     "validator": "^10.8.0"
   },
   "scripts": {
     "serve": "live-server public",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
