--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "moment": "2.18.1",
     "normalize.css": "7.0.0",
     "react": "16.0.0",
+    "react-addons-shallow-compare": "15.6.0",
+    "react-dates": "12.7.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
