--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "jest": "20.0.4",
     "moment": "2.18.1",
     "normalize.css": "7.0.0",
     "react": "16.0.0",
@@ -24,7 +25,8 @@
   "scripts": {
     "serve": "live-server public",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
