--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "serve": "live-server public",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
@@ -35,8 +35,13 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "css-loader": "0.28.4",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
+    "raf": "3.3.2",
+    "react-test-renderer": "16.0.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.1.0",
