--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "serve": "live-server public",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
