--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "raf": "3.3.2",
