--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "express": "^4.17.1",
     "jest": "20.0.4",
     "moment": "2.18.1",
     "normalize.css": "7.0.0",
