--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.4",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.18.1",
+    "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -19,8 +22,11 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
     "uuid": "3.1.0",
-    "validator": "^10.8.0"
+    "validator": "^10.8.0",
+    "webpack": "3.1.0"
   },
   "scripts": {
     "build:dev": "webpack",
@@ -36,18 +42,12 @@
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "css-loader": "0.28.4",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
-    "node-sass": "4.5.3",
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   }
 }
