--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
     "moment": "2.18.1",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.13.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
     "react": "16.0.0",
@@ -24,6 +24,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "redux-mock-store": "1.2.3",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
